--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MAIL_FROM_ADDRESS=blowxinc@gmail.com
+MAIL_FROM_ADDRESS=support@thebillionairestoken.io
 MAIL_FROM_NAME=Blow X
 MAIL_HOST=smtp.zoho.com
 MAIL_MAILER=smtp
