--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MAIL_FROM_ADDRESS=listing@blowx.ai
-MAIL_FROM_NAME=Blowx listing
+MAIL_FROM_ADDRESS=info@blowx.ai
+MAIL_FROM_NAME=BlowX
 MAIL_HOST=smtp.zoho.com
 MAIL_MAILER=smtp
-MAIL_PASSWORD=JustBlow2023@04
+MAIL_PASSWORD=JustBlow2023@01
 MAIL_PORT=465
-MAIL_USERNAME=listing@blowx.ai
+MAIL_USERNAME=info@blowx.ai
